# OsasLedServer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  temp.cpp
arduino/: arduino.ino
include/: Effect.h  LedController.h  PacketRouter.h  Pixel.h  SerialPort.hpp  WebSocket.h  WebSocketServer.h  stdafx.h
include/Dispatchers/: EffectDispatcher.h
include/Effects/: AmbientLight.h  ColorWheel.h  StaticColor.h
libs/: sha1.hpp
src/: AmbientLight.cpp  LedController.cpp  PacketRouter.cpp  Pixel.cpp  SerialPort.cpp  WebSocket.cpp  WebSocketServer.cpp  ambient_code.cpp
src/Dispatchers/: EffectDispatcher.cpp
src/Effects/: AmbientLight.cpp
utils/: FunctionQueue.h
windows/: SerialPort_windows.hpp  WebSocketServer_windows.h
